--- a/BooksBud-Project/src/components/books/BookList.module.css
+++ b/BooksBud-Project/src/components/books/BookList.module.css
@@ -1,13 +1,14 @@
 .list {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 5%;
 }
 
 .sorting {
+  padding: 0 5%;
+  margin-top: 3rem;
   padding-bottom: 1rem;
-  border-bottom: 3px solid #b2d4d4;
-  margin-bottom: 2rem;
+  /* border-bottom: 3px solid #b2d4d4; */
 }
 
 .sorting button {
