--- a/BooksBud-Project/src/components/layout/Layout.module.css
+++ b/BooksBud-Project/src/components/layout/Layout.module.css
@@ -1,5 +1,7 @@
 .main {
-  margin: 3rem auto;
-  width: 90%;
-  max-width: 40rem;
+  width: 100%;
+  /* background-color: white; */
 }
+/* margin: 3rem auto;
+  width: 90%;
+  max-width: 40rem; */
