--- a/BooksBud-Project/src/components/books/BookItem.module.css
+++ b/BooksBud-Project/src/components/books/BookItem.module.css
@@ -1,37 +1,60 @@
 .item {
-  margin: 1rem 0;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  background-color: #c2e7f0;
+  margin: 2rem 0;
+  padding: 0.7rem;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 15px 25px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 9px;
+  background-color: white;
+  height: 18.1rem;
+  width: 14.5rem;
+  overflow: hidden;
 }
 
-.item:last-of-type {
-  border-bottom: none;
+.item:hover {
+  transform: translateY(-1rem);
+}
+
+ul {
+  list-style: none;
+  display: inline-block;
+  padding: 0.7rem;
+
+  align-items: center;
+  justify-content: center;
+}
+
+li {
+  margin-bottom: 0.6rem;
+}
+
+ion-icon {
+  color: #66c873;
+  height: 1.3rem;
+  width: 1.3rem;
+  margin-right: 0.8rem;
+}
+span {
+  color: #333;
+  font-size: 0.85rem;
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 1.4;
 }
 
 .item figure {
   margin: 0;
   padding: 0;
-  width: 70%;
-}
-
-.item blockquote {
-  margin: 0;
-  text-align: left;
-  font-size: 1.5rem;
-  color: #212929;
+  max-width: 100%;
 }
 
 .item p {
-  margin: 0;
-  margin-bottom: 0.25rem;
+  margin: 0rem 0.5rem;
+  margin-bottom: 0.8rem;
+  height: 5rem;
 }
 
-.item figcaption {
-  font-style: italic;
-  color: #566d6d;
+.actions {
+  text-align: center;
 }
