--- a/BooksBud-Project/src/components/books/BookList.module.css
+++ b/BooksBud-Project/src/components/books/BookList.module.css
@@ -1,26 +1,47 @@
 .list {
   list-style: none;
   margin: 0;
-  padding: 0 5%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  align-items: center;
 }
 
 .sorting {
-  padding: 0 5%;
-  margin-top: 3rem;
-  padding-bottom: 1rem;
+  margin-top: 1rem;
+  /* padding: 0 5%; */
   /* border-bottom: 3px solid #b2d4d4; */
+}
+.section {
+  max-width: 100%;
+  padding: 0 5%;
+  background-color: #fff;
 }
 
 .sorting button {
-  font: inherit;
-  color: teal;
-  border: 1px solid teal;
-  background-color: transparent;
-  border-radius: 4px;
+  display: inline-block;
+  font-size: 0.85rem;
+  font-family: inherit;
+  font-weight: 600;
+  line-height: 1.4;
+
+  border-radius: 9px;
+  border: 0.1rem solid #66c873;
+  color: #333;
   padding: 0.5rem 1.5rem;
-  cursor: pointer;
+  background-color: #fff;
+  text-decoration: none;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
 }
 
-.sorting button:hover {
-  background-color: #c2fafa;
+.sorting button:hover,
+.soting button:active {
+  background-color: #f0f0f0;
+  box-shadow: inset 0 0 0 3px #fff;
+  
+}
+
+.box {
+  display: inline-block;
+  align-items: center;
 }
