--- a/BooksBud-Project/src/components/layout/MainNavigation.module.css
+++ b/BooksBud-Project/src/components/layout/MainNavigation.module.css
@@ -1,17 +1,17 @@
 .header {
   width: 100%;
-  height: 4rem;
+  height: 3.5rem;
   display: flex;
   padding: 0 5%;
   justify-content: space-between;
   align-items: center;
-  background-color: #008080;
+  background-image: linear-gradient(to top left, #9be15d, #39b385);
 }
 
 .logo a {
   font-size: 2rem;
   text-decoration: none;
-  color: #88dfdf;
+  color: #333;
 }
 
 .nav ul {
@@ -19,26 +19,47 @@
   display: flex;
   margin: 0;
   padding: 0;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav li {
   margin-left: 1.5rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.4;
+}
+
+.lastchild {
+  border: none;
+  border-radius: 9px;
+  cursor: pointer;
+  background-color: #fff;
+  padding: 0.4rem 1.5rem;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2);
+  color: #333;
 }
 
 .nav a {
   text-decoration: none;
-  color: #88dfdf;
+  color: #333;
 }
 
-.nav a:hover,
-.nav a:active,
-.nav a.active {
-  color: #e6fcfc;
+.lastchild a:hover,
+.lastchild a:active,
+.lastchild a.active {
+  color: #66c873;
+}
+
+.otherchild a:hover,
+.otherchild a:active,
+.otherchild a.active {
+  color: #fff;
 }
 
 .logo a:hover,
 .logo a:active,
 .logo a.active {
-  color: #e6fcfc;
+  color: #fff;
 }
