--- a/BooksBud-Project/src/index.css
+++ b/BooksBud-Project/src/index.css
@@ -5,15 +5,19 @@
 body {
   font-family: "Rubik", sans-serif;
   margin: 0;
-  background-color: #e7f8f8;
+  background-color: #fff;
 }
 
 .centered {
-  margin: 3rem auto;
+  margin: 7rem auto;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-size: 1.6rem;
+  line-height: 1.2;
+  font-weight: 400;
 }
 
 .focused {
@@ -23,34 +27,30 @@ body {
 }
 
 .btn {
+  display: inline-block;
   text-decoration: none;
-  background-color: teal;
-  color: white;
-  border-radius: 4px;
-  padding: 0.75rem 1.5rem;
-  border: 1px solid teal;
+  background-image: linear-gradient(to top left, #39b385, #9be15d);
+  border-radius: 9px;
+  border: none;
   cursor: pointer;
+  font-size: 0.9rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.4;
+  color: #fff;
+  padding: 0.5rem 2rem;
+  text-align: center;
+  margin-top: 0.3rem;
+  margin-bottom: 0.5rem;
 }
 
 .btn:hover,
 .btn:active {
-  background-color: #11acac;
-  border-color: #11acac;
+  background-image: linear-gradient(to top left, #fff, #fff);
+  color: #66c873;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.3);
 }
 
-.btn--flat {
-  cursor: pointer;
-  font: inherit;
-  color: teal;
-  border: none;
-  background-color: none;
-  text-decoration: none;
-  padding: 0.75rem 1.5rem;
-  border-radius: 4px;
-}
-
-.btn--flat:hover,
-.btn--flat:active {
-  background-color: teal;
-  color: white;
+.actions {
+  text-align: center;
 }
