--- a/BooksBud-Project/src/pages/HomePage.module.css
+++ b/BooksBud-Project/src/pages/HomePage.module.css
@@ -1,100 +1,92 @@
 .textbox {
-  font-weight: 700;
+  font-family: inherit;
+  align-self: center;
   color: #333;
   letter-spacing: -0.5px;
+  padding: 0 3%;
+}
+.textbox h3 {
+  font-size: 0.9rem;
+  line-height: 1.4;
+  color: #777;
+  margin-bottom: 2.2rem;
+  font-weight: 450;
 }
 .textbox h1 {
-  font-size: 3.4rem;
-  line-height: 1.05;
-  margin-bottom: 1.2rem;
+  font-size: 2.8rem;
+  line-height: 1;
+  font-weight: 600;
+  color: #555;
 }
 .textbox h2 {
   font-size: 1.6rem;
   line-height: 1.2;
-  margin-bottom: 2.2rem;
+  font-weight: 400;
+  color: black;
 }
-
-/* .btn,
-.btn:link,
-.btn:visited {
-  display: inline-block;
+.textbox span {
+  color: #66c873;
+  font-weight: 400;
   font-size: 1.6rem;
-  text-decoration: none;
-  padding: 1.2rem 2.4rem;
-  border-radius: 9px;
-  font-weight: 600;
-  border: none;
-  cursor: pointer;
-  font-family: inherit;
-  
-  transition: all 0.3s;
-} */
-/* .btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
+  line-height: 1.2;
 }
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-  color: #fff;
-}
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  box-shadow: inset 0 0 0 3px #fff;
-}
-.margin-right-sm {
-  margin-right: 1.2rem !important;
-}*/
 
 .container {
   width: 100%;
   padding: 0 5%;
-  background-color: white;
+  background-color: #fff;
 }
 
 .hero-section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 6rem;
+  gap: 7rem;
   align-items: center;
 }
-.textbox {
-  align-self: center;
-  padding: 0;
-}
-.textbox p {
-  font-size: 1.2rem;
-  line-height: 1.6;
-  margin-bottom: 3.2rem;
-  font-weight: 550;
-}
+
 .hero-img {
   width: 90%;
 }
 
-.logo a:hover,
-.logo a:active,
-.logo a.active {
-  color: #e6fcfc;
+.btn {
+  display: inline-block;
+  font-size: 1rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.4;
 }
-.logo a {
-  font-size: 2rem;
+.btn--full:link,
+.btn--full:visited {
+  border: none;
+  border-radius: 9px;
+  cursor: pointer;
+  color: #fff;
+  background-image: linear-gradient(to top left, #39b385, #9be15d);
   text-decoration: none;
-  color: #88dfdf;
+  padding: 0.75rem 2rem;
+  margin-right: 1.2rem !important;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2);
+}
+.btn--full:hover,
+.btn--full:active {
+  background-image: linear-gradient(to top left, #fff, #fff);
+  color: #66c873;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.4);
 }
 
-/* .textbox h2 {
-  font-size: 1.2rem;
-  font-weight: 600;
-} */
-.textbox span {
-  color: #cf711f;
-  font-weight: 500;
+.btn--outline:link,
+.btn--outline:visited {
+  border-radius: 9px;
+  border: 0.1rem solid #66c873;
+  color: #333;
+  padding: 0.66rem 1.5rem;
+  background-color: #fff;
+  text-decoration: none;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #f0f0f0;
+  box-shadow: inset 0 0 0 3px #fff;
 }
