--- a/BooksBud-Project/src/components/books/HighlightedBook.module.css
+++ b/BooksBud-Project/src/components/books/HighlightedBook.module.css
@@ -1,20 +1,88 @@
-.book {
-  background-color: #162b2b;
-  color: white;
-  border-radius: 6px;
-  padding: 3rem;
-  margin: 3rem auto;
-  width: 90%;
-  max-width: 40rem;
+.hero-section {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
 }
 
-.book p {
-  font-size: 2.5rem;
+.container {
+  width: 100%;
+  padding: 0 5%;
+  background-color: #fff;
+  justify-content: center;
+}
+.img-box {
+  height: 21rem;
+  width: 13rem;
+  overflow: hidden;
+}
+.img {
+  width: 100%;
 }
 
-.book figcaption {
-  font-style: italic;
-  font-size: 1.5rem;
-  text-align: left;
-  color: #a1e0e0;
+.item {
+  margin: 1rem auto;
+  padding: 1.5rem;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 15px 25px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 9px;
+  background-color: white;
+  height: 23rem;
+  width: 45rem;
+  overflow: hidden;
 }
+
+/* .item:hover {
+  transform: translateY(-1rem);
+} */
+
+ul {
+  list-style: none;
+  display: inline-block;
+  padding: 0.7rem;
+
+  align-items: center;
+  justify-content: center;
+}
+
+li {
+  margin-bottom: 0.6rem;
+  display: flex;
+}
+
+ion-icon {
+  color: #66c873;
+  height: 1.3rem;
+  width: 1.3rem;
+  margin-right: 0.8rem;
+  text-align: center;
+}
+
+span {
+  color: #333;
+  font-size: 0.85rem;
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+.item figure {
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+}
+
+.item p {
+  margin: 0rem 0.5rem;
+  font-size: 1.6rem;
+}
+.textbox {
+  height: 7rem;
+  width: 32rem;
+  padding: 1rem;
+}
+
+/* .actions {
+  text-align: center;
+} */
