--- a/BooksBud-Project/src/components/comments/CommentItem.module.css
+++ b/BooksBud-Project/src/components/comments/CommentItem.module.css
@@ -1,7 +1,10 @@
-.item {
-  margin: 1rem 0;
-  color: #4a5555;
-  font-size: 1.25rem;
-  padding-bottom: 0.5rem;
-  border-bottom: 2px solid teal;;
+.small {
+  font-size: 1.4rem;
+  color: #66c873;
+  font-weight: 400;
+  line-height: 1.2;
+  border-bottom: 0.07rem solid #66c873;
+  /* padding-bottom: 0.5rem; */
+  /* margin: 1rem 0; */
+  display: flex;
 }
