--- a/BooksBud-Project/src/index.css
+++ b/BooksBud-Project/src/index.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  color: #222;
   font-size: 1.6rem;
   line-height: 1.2;
   font-weight: 400;
@@ -53,4 +53,15 @@ body {
 
 .actions {
   text-align: center;
+}
+
+figcaption {
+  font-style: italic;
+  font-size: 1.1rem;
+  text-align: center;
+  color: #66c873;
+  font-family: inherit;
+  font-weight: 450;
+  line-height: 1.2;
+  margin-top: 0.3rem;
 }
