--- a/BooksBud-Project/src/components/books/BookForm.module.css
+++ b/BooksBud-Project/src/components/books/BookForm.module.css
@@ -19,7 +19,7 @@
 .control label {
   display: block;
   margin-bottom: 0.5rem;
-  color: #333;
+  color: #32506c;
   font-size: 0.85rem;
   font-family: inherit;
   font-weight: 600;
