--- a/BooksBud-Project/src/components/books/BookList.module.css
+++ b/BooksBud-Project/src/components/books/BookList.module.css
@@ -3,10 +3,17 @@
   margin: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 4rem;
   align-items: center;
 }
 
+.sorting button ion-icon {
+  color: #32506c;
+  height: 1.3rem;
+  width: 1.3rem;
+  margin-right: 0.3rem;
+  text-align: center;
+}
 .sorting {
   margin-top: 1rem;
   /* padding: 0 5%; */
@@ -19,7 +26,7 @@
 }
 
 .sorting button {
-  display: inline-block;
+  display: flex;
   font-size: 0.85rem;
   font-family: inherit;
   font-weight: 600;
@@ -27,8 +34,8 @@
 
   border-radius: 9px;
   border: 0.1rem solid #66c873;
-  color: #333;
-  padding: 0.5rem 1.5rem;
+  color: #32506c;
+  padding: 0.4rem 1rem;
   background-color: #fff;
   text-decoration: none;
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
@@ -38,7 +45,6 @@
 .soting button:active {
   background-color: #f0f0f0;
   box-shadow: inset 0 0 0 3px #fff;
-  
 }
 
 .box {
