--- a/BooksBud-Project/src/components/comments/CommentItem.module.css
+++ b/BooksBud-Project/src/components/comments/CommentItem.module.css
@@ -1,10 +1,11 @@
 .small {
-  font-size: 1.4rem;
-  color: #66c873;
+  font-style: italic;
+  font-size: 1rem;
+  text-align: center;
+  color: #32506c;
+  font-family: inherit;
   font-weight: 400;
   line-height: 1.2;
+  margin-top: 0.3rem;
   border-bottom: 0.07rem solid #66c873;
-  /* padding-bottom: 0.5rem; */
-  /* margin: 1rem 0; */
-  display: flex;
 }
