--- a/BooksBud-Project/src/components/comments/NewCommentForm.module.css
+++ b/BooksBud-Project/src/components/comments/NewCommentForm.module.css
@@ -1,7 +1,7 @@
 .form {
-  margin-top: 1rem;
   position: relative;
   text-align: center;
+  width: 25rem;
 }
 
 .loading {
@@ -14,17 +14,17 @@
   align-items: center;
 }
 .control {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .control label {
-  color: #333;
+  color: #32506c;
   font-size: 0.85rem;
   font-family: inherit;
   font-weight: 600;
   line-height: 1.4;
   display: block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .control input,
@@ -47,5 +47,3 @@
 .control textarea:focus {
   outline-color: #66c873;
 }
-
-
